Add suggestions to the text

--- a/digtal_storyteller/css/comic_all.css
+++ b/digtal_storyteller/css/comic_all.css
@@ -825,6 +825,13 @@ opacity: 50%;
       /* border: 3px solid #18e7e7; */
     }
 
+    .recommend_panel{
+      margin-left: 15px;
+    }
+    .recommend_panel a{
+      text-decoration: underline;
+      font-size: larger;
+    }
 
  /* -- Yichen CSS End -- */
 
